--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                                     <div class="col">
                                         <a href="#"><span class="bi bi-facebook fs-5"></span></a>
                                     </div>
-                                    </div>
+                                </div>
                             </ul>
                         </small>
                     </div>
@@ -435,7 +435,7 @@
                                     <div class="col">
                                         <a href="#"><span class="bi bi-facebook fs-5"></span></a>
                                     </div>
-                                    </div>
+                                </div>
                             </ul>
                         </small>
                     </div>
@@ -456,7 +456,7 @@
                                     <div class="col">
                                         <a href="#"><span class="bi bi-facebook fs-5"></span></a>
                                     </div>
-                                    </div>
+                                </div>
                             </ul>
                         </small>
                     </div>
@@ -477,7 +477,7 @@
                                     <div class="col">
                                         <a href="#"><span class="bi bi-facebook fs-5"></span></a>
                                     </div>
-                                    </div>
+                                </div>
                             </ul>
                         </small>
                     </div>
@@ -536,67 +536,62 @@
             </div>
         </div>
     </div>
+
     <br>
     <br>
 
-    <div class="container p-4" id="Our_Location">
-        <div class="row justify-content-md-center  ">
-            <div class="col-md-auto">
-                <div class="card text-white ">
-                    <img src="images/location_icon.jpg" id="locimg" class="card-img" alt="...">
-                    <div class="card-img-overlay">
-                        <div class="row">
-                            <div class="col">
-                                <div class="card-body">
-                                    <button class="btn btn-danger" id="locButton" type="button">
-                                        <a class="text-white m-1 d-inline-block text-decoration-none"
-                                            href="https://www.google.com/maps/place/Anas+dental+clinic/@32.6401702,35.9882994,17z/data=!3m1!4b1!4m5!3m4!1s0x151bf5fdcc84606d:0x8558332131e158f2!8m2!3d32.6401702!4d35.9904881">
-                                            <svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 0 24 24"
-                                                width="30px" fill="#ffffff">
-                                                <path d="M0 0h24v24H0z" fill="none" />
-                                                <path
-                                                    d="M20 1v3h3v2h-3v3h-2V6h-3V4h3V1h2zm-8 12c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm2-9.75V7h3v3h2.92c.05.39.08.79.08 1.2 0 3.32-2.67 7.25-8 11.8-5.33-4.55-8-8.48-8-11.8C4 6.22 7.8 3 12 3c.68 0 1.35.08 2 .25z" />
-                                            </svg>
-                                            Click here to go to the site</a></button>
-                                </div>
-                            </div>
-                            <div class="col">
-                                <div class="card-body">
-                                    <h3 id="title">Dental Clinic<h3>
-                                            <h6 class="ms-4">Street: Omar Ibn Al Khattab Street</h6>
-                                            <h6 class="ms-4">Irbid</h6>
-                                            <h6 class="ms-4">Jordan</h6>
-                                            <a href="" class="text-white text-decoration-none" data-bs-toggle="tooltip"
-                                                data-bs-placement="top" title="Phone">
-                                                <h6 class="ms-4">Tel: 00962797874883 </h6>
-                                            </a>
-                                </div>
-                            </div>
+    <div class=" row justify-content-md-center p-1" id="Our_Location">
+        <div class="col-md-8 bg-opacity-50 p-1">
+            <div class="card " id="bk">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col">
+                            <button class="btn btn-danger" id="locButton" type="button">
+                                <a class="text-white m-1 d-inline-block text-decoration-none"
+                                    href="https://www.google.com/maps/place/Anas+dental+clinic/@32.6401702,35.9882994,17z/data=!3m1!4b1!4m5!3m4!1s0x151bf5fdcc84606d:0x8558332131e158f2!8m2!3d32.6401702!4d35.9904881">
+                                    <svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 0 24 24"
+                                        width="30px" fill="#ffffff">
+                                        <path d="M0 0h24v24H0z" fill="none" />
+                                        <path
+                                            d="M20 1v3h3v2h-3v3h-2V6h-3V4h3V1h2zm-8 12c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm2-9.75V7h3v3h2.92c.05.39.08.79.08 1.2 0 3.32-2.67 7.25-8 11.8-5.33-4.55-8-8.48-8-11.8C4 6.22 7.8 3 12 3c.68 0 1.35.08 2 .25z" />
+                                    </svg>
+                                    Click here to go to the site</a></button>
+                        </div>
+                        <div class="col text-dark">
+                            <h3 id="title">Dental Clinic<h3>
+                                    <h6 class="ms-4">Street: Omar Ibn Al Khattab Street</h6>
+                                    <h6 class="ms-4">Irbid</h6>
+                                    <h6 class="ms-4">Jordan</h6>
+                                    <a href="" class="text-black text-decoration-none" data-bs-toggle="tooltip"
+                                        data-bs-placement="top" title="Phone">
+                                        <h6 class="ms-4">Tel: 00962797874883 </h6>
+                                    </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-<footer class="p-3 alert-dark text-muted fs-1">
-    <div class="container">
-        <div class="row">
-          <div class="col">
-            <!-- <div class="d-flex justify-content-between"> -->
-                <h5 class="ms-3">&copy; 2021 The Clinic Name. Template by </h5>
-          </div>
-          <div class="col">
-            <h5>Subscribe to our Facebook Page</h5>
+    <br>
+    <br>
+    <footer class="p-3 alert-dark text-muted fs-1">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <!-- <div class="d-flex justify-content-between"> -->
+                    <h5 class="ms-3">&copy; 2021 The Clinic Name. Template by </h5>
+                </div>
+                <div class="col">
+                    <h5>Subscribe to our Facebook Page</h5>
                     <div class="d-flex w-100 gap-2">
                         <button class="btn btn-primary ms-4" type="button">
                             <a href="#"><span class="bi bi-facebook text-white"></span></a>
                             Subscribe</button>
                     </div>
-          </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-            crossorigin="anonymous"></script>
+                </div>
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+                    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+                    crossorigin="anonymous"></script>
     </footer>
 
 
